Commiting Stable Version

--- a/lsms/src/main/webapp/template/sidebar.xhtml
+++ b/lsms/src/main/webapp/template/sidebar.xhtml
@@ -6,13 +6,18 @@
     <ui:composition>
  
         <ul class="nav nav-sidebar">
-            <li><a href="/lsms/regular/regular_1.xhtml">Regular Ls</a></li>
+            <li><a href="/lsms/regular/rls_1.xhtml">Regular Ls</a></li>
             <li><a href="/lsms/ext/extended_page1.xhtml">Extended Ls</a></li>
             <li><a href="/lsms/usl/usl_1.xhtml">Unscheduled Ls</a></li>
             <li><a href="/lsms/ovl/ovl_1.xhtml">Overloading</a></li>
             <li><a href="/lsms/lsdev/lsdev_1.xhtml">Ls Deviation</a></li>
             <li><a href="/lsms/lsp/lsp_1.xhtml">Ls Priority</a></li>
-            <li><a href="/lsms/spg/spg_1.xhtml">Special Group</a></li>
+            <li><a href="javascript:;" data-toggle="collapse" data-target="#spg">Special Group</a>
+                <ul id="spg" class="collapse">
+                    <li><a href="/lsms/spg/spg_1.xhtml">Create Special Group</a></li>
+                    <li><a href="/lsms/spg/spg_2.xhtml">Special Group Load</a></li>
+                </ul>
+            </li>
         </ul>
         <ul class="nav nav-sidebar">
             <li>
